Fix regex filter to also download documents with large paths (_id is a hash, entry path is in the _path field).